user-apps/miscellaneous/changedetection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
spec:
  selector:
    app: changedetection
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
