user-apps/miscellaneous/changedetection/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: changedetection
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Miscellaneous
    gethomepage.dev/name: ChangeDetection
    gethomepage.dev/icon: https://raw.githubusercontent.com/dgtlmoon/changedetection.io/master/changedetectionio/static/images/generic-icon.svg
    gethomepage.dev/href: https://watcher.tamhomelab.com
    gethomepage.dev/description: Website Monitor
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - "watcher.tamhomelab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: changedetection
          port: 5000
          weight: 1
